[package]
name = "getkey"
description = "A memory-safe way to get a key from the terminal in any OS that supports either Termion or Windows."
version = "0.1.0"
edition = "2021"
license = "Unlicense"
#license-file = "LICENSE"
authors = ["Kira \"Siri\" K. <siri1999kira@yahoo.co.jp>"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(unix)'.dependencies]
termion = "2" # Still required on Windows to use the Key Enum

[target.'cfg(windows)'.dependencies.windows]
version = "0.48"
features = [
    "Win32_System_Console", 
    "Win32_Foundation"
]